--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -619,6 +619,17 @@
   timestamp = {2019.03.13},
 }
 
+@InProceedings{Akaike1973,
+  author    = {Akaike, H.},
+  title     = {Information theory and and extension of the maximum likelihood principle},
+  booktitle = {2nd international symposium on information theory},
+  year      = {1973},
+  pages     = {267-281},
+  owner     = {Vincent},
+  timestamp = {2020.12.18},
+  url       = {https://escholarship.org/content/qt0fd986xb/qt0fd986xb.pdf},
+}
+
 @InCollection{Akaike1974,
   author    = {Akaike, H.},
   title     = {A New Look at the Statistical Model Identification},
@@ -666,6 +677,19 @@
   doi       = {10.1109/eisic.2012.16},
   owner     = {Vincent},
   timestamp = {2019.04.10},
+}
+
+@Article{Aks1996,
+  author    = {Aks, D. J. and Sprott, J. C.},
+  title     = {Quantifying Aesthetic Preference for Chaotic Patterns},
+  journal   = {Empirical Studies of the Arts},
+  year      = {1996},
+  volume    = {14},
+  number    = {1},
+  pages     = {1-16},
+  doi       = {10.2190/6v31-7m9r-t9l5-cdg9},
+  owner     = {Vincent},
+  timestamp = {2020.12.18},
 }
 
 @InProceedings{Alayrac2016,
@@ -787,6 +811,19 @@
   owner     = {Vincent},
   timestamp = {2019.03.28},
   url       = {https://www.wiley.com/en-us/Social+Intelligence%3A+The+New+Science+of+Success-p-9780470444344},
+}
+
+@Article{Albright1973,
+  author    = {Albright, W. F.},
+  title     = {From the Patriarchs to Moses II. Moses out of Egypt},
+  journal   = {Biblical Archaeologist},
+  year      = {1973},
+  volume    = {36},
+  number    = {2},
+  pages     = {48-76},
+  doi       = {10.2307/3211050},
+  owner     = {Vincent},
+  timestamp = {2020.12.18},
 }
 
 @Electronic{Albright2015,
@@ -1171,6 +1208,16 @@
   owner     = {Vincent},
   timestamp = {2019.06.24},
   url       = {https://books.google.fr/books/about/The_Christology_of_the_Fourth_Gospel.html?id=b93YtOg2cvAC},
+}
+
+@Book{Anderson2012,
+  title     = {The Samaritan Pentateuch},
+  publisher = {SBL Press},
+  year      = {2012},
+  author    = {Anderson, R. T. and Giles, T.},
+  doi       = {10.2307/j.ctt32bzhn},
+  owner     = {Vincent},
+  timestamp = {2020.12.18},
 }
 
 @Electronic{Anderson2017,
@@ -2483,6 +2530,19 @@
   doi       = {10.1075/rcl.11.2.09bat},
   owner     = {Vincent},
   timestamp = {2020.12.12},
+}
+
+@Article{Bauke2007,
+  author    = {Bauke, H.},
+  title     = {Parameter estimation for power-law distributions by maximum likelihood methods},
+  journal   = {European Physical Journal B},
+  year      = {2007},
+  volume    = {58},
+  number    = {2},
+  pages     = {167-173},
+  doi       = {10.1140/epjb/e2007-00219-y},
+  owner     = {Vincent},
+  timestamp = {2020.12.18},
 }
 
 @Article{Bavelas1948,
@@ -4673,6 +4733,19 @@
   url       = {https://books.google.fr/books/about/Who_s_who_in_the_New_Testament.html?id=1IVu-JIwa-YC},
 }
 
+@Article{BROYDEN1970,
+  author    = {Broyden, C. G.},
+  title     = {The Convergence of a Class of Double-rank Minimization Algorithms 1. General Considerations},
+  journal   = {IMA Journal of Applied Mathematics},
+  year      = {1970},
+  volume    = {6},
+  number    = {1},
+  pages     = {76-90},
+  doi       = {10.1093/imamat/6.1.76},
+  owner     = {Vincent},
+  timestamp = {2020.12.18},
+}
+
 @Article{Bruner1991,
   author    = {Bruner, J.},
   title     = {The Narrative Construction of Reality},
@@ -6504,6 +6577,20 @@
   timestamp = {2018.05.24},
 }
 
+@Article{Clark1999,
+  author    = {Clark, R. M. and Cox, S. J. D. and Laslett, G. M.},
+  title     = {Generalizations of power-law distributions applicable to sampled fault-trace lengths: model choice, parameter estimation and caveats},
+  journal   = {Geophysical Journal International},
+  year      = {1999},
+  volume    = {136},
+  number    = {2},
+  pages     = {357-372},
+  doi       = {10.1046/j.1365-246x.1999.00728.x},
+  groups    = {Power Law},
+  owner     = {Vincent},
+  timestamp = {2020.12.18},
+}
+
 @Article{Clarke2010,
   author    = {Clarke, J. and Lapata, M.},
   title     = {Discourse Constraints for Document Compression},
@@ -7330,6 +7417,19 @@
   timestamp = {2020.07.21},
 }
 
+@Article{Czachesz2012,
+  author    = {Czachesz, I.},
+  title     = {God in the Fractals: Recursiveness as a Key to Religious Behavior},
+  journal   = {Method \& Theory in the Study of Religion},
+  year      = {2012},
+  volume    = {24},
+  number    = {1},
+  pages     = {3-28},
+  doi       = {10.1163/157006812x632856},
+  owner     = {Vincent},
+  timestamp = {2020.12.18},
+}
+
 @Article{Czar2007,
   author    = {Cózar, J. R. and Guil, N. and González-Linares, J. M. and Zapata, E. L. and Izquierdo, E.},
   title     = {Logotype detection to support semantic-based video annotation},
@@ -8037,6 +8137,16 @@
   url       = {https://www.taylorfrancis.com/books/e/9781135965259/chapters/10.4324/9780203873540-12},
 }
 
+@Book{Dever2003,
+  title     = {Who were the early Isrealites and where did they come from?},
+  publisher = {Wiliam B. Eerdmans Publishing},
+  year      = {2003},
+  author    = {Dever, W. G.},
+  owner     = {Vincent},
+  timestamp = {2020.12.18},
+  url       = {https://www.questia.com/library/120092022/},
+}
+
 @InProceedings{Devisree2016,
   author    = {Devisree, V. and Reghu Raj, P. C.},
   title     = {A hybrid approach to relationship extraction from stories},
@@ -8468,6 +8578,19 @@
   timestamp = {2017.05.05},
 }
 
+@Article{Dorogovtsev2000,
+  author    = {Dorogovtsev, S. N. and Mendes, J. F. F.},
+  title     = {Evolution of networks with aging of sites},
+  journal   = {Physical Review E},
+  year      = {2000},
+  volume    = {62},
+  number    = {2},
+  pages     = {1842-1845},
+  doi       = {10.1103/PhysRevE.62.1842},
+  owner     = {Vincent},
+  timestamp = {2010.12.18},
+}
+
 @Article{Dorogovtsev2001a,
   author    = {Dorogovtsev, S. N. and Mendes, J. F. F.},
   title     = {Language as an evolving Word Web},
@@ -8589,6 +8712,16 @@
   timestamp = {2019.04.06},
 }
 
+@Book{Dozeman2006,
+  title     = {A farewell to the Yahwist?},
+  publisher = {Society of Biblical Literature},
+  year      = {2006},
+  author    = {Dozeman, T. B. and Schmid, K.},
+  owner     = {Vincent},
+  timestamp = {2020.12.18},
+  url       = {https://brill.com/view/title/11071},
+}
+
 @Book{Draughon2003,
   title     = {Advanced Writing: Fiction and Film},
   publisher = {iUniverse},
@@ -8656,6 +8789,19 @@
   owner     = {Vincent},
   timestamp = {2020.01.02},
   url       = {https://muse.jhu.edu/article/552219},
+}
+
+@Article{DSouza2007,
+  author    = {D'Souza, R. M. and Borgs, C. and Chayes, J. T. and Berger, N. and Kleinberg, R. D.},
+  title     = {Emergence of tempered preferential attachment from optimization},
+  journal   = {Proceedings of the National Academy of Sciences},
+  year      = {2007},
+  volume    = {104},
+  number    = {15},
+  pages     = {6112-6117},
+  doi       = {10.1073/pnas.0606779104},
+  owner     = {Vincent},
+  timestamp = {2020.12.18},
 }
 
 @InProceedings{Du2012,
@@ -8885,6 +9031,19 @@
   doi       = {10.1556/jcep.3.2005.1.1},
   owner     = {Vincent},
   timestamp = {2020.11.17},
+}
+
+@Article{Dunbar2012,
+  author    = {Dunbar, R. I. M.},
+  title     = {Social cognition on the Internet: testing constraints on social network size},
+  journal   = {Philosophical Transactions of the Royal Society B: Biological Sciences},
+  year      = {2012},
+  volume    = {367},
+  number    = {1599},
+  pages     = {2192-2201},
+  doi       = {10.1098/rstb.2012.0121},
+  owner     = {Vincent},
+  timestamp = {2020.12.18},
 }
 
 @InCollection{Dunbar2014,
@@ -10213,6 +10372,19 @@
   timestamp = {2019.07.03},
 }
 
+@Article{Fenner2007,
+  author    = {Fenner, T. and Levene, M. and Loizou, G.},
+  title     = {A model for collaboration networks giving rise to a power-law distribution with an exponential cutoff},
+  journal   = {Social Networks},
+  year      = {2007},
+  volume    = {29},
+  number    = {1},
+  pages     = {70-80},
+  doi       = {10.1016/j.socnet.2005.12.003},
+  owner     = {Vincent},
+  timestamp = {2020.12.18},
+}
+
 @Article{Fenu2017,
   author    = {Fenu, C. and Higham, D. J.},
   title     = {Block Matrix Formulations for Evolving Networks},
@@ -10390,6 +10562,16 @@
   doi       = {10.3115/1219840.1219885},
   owner     = {Vincent},
   timestamp = {2019.03.30},
+}
+
+@Book{Finkelstein2007,
+  title     = {The Quest for the Historical Israel},
+  publisher = {Society of Biblical Literature},
+  year      = {2007},
+  author    = {Finkelstein, I. and Mazar, A.},
+  owner     = {Vincent},
+  timestamp = {2020.12.18},
+  url       = {https://brill.com/view/title/13968},
 }
 
 @TechReport{Finlayson2006,
@@ -10629,6 +10811,19 @@
   doi       = {10.1080/1356978042000255067},
   owner     = {Vincent},
   timestamp = {2019.08.18},
+}
+
+@Article{Fletcher1970,
+  author    = {Fletcher, R.},
+  title     = {A new approach to variable metric algorithms},
+  journal   = {Computer Journal},
+  year      = {1970},
+  volume    = {13},
+  number    = {3},
+  pages     = {317-322},
+  doi       = {10.1093/comjnl/13.3.317},
+  owner     = {Vincent},
+  timestamp = {2020.12.18},
 }
 
 @Book{Flower1947,
@@ -12086,6 +12281,19 @@
   timestamp = {2019.04.12},
 }
 
+@Article{Goldfarb1970,
+  author    = {Goldfarb, D.},
+  title     = {A family of variable-metric methods derived by variational means},
+  journal   = {Mathematics of Computation},
+  year      = {1970},
+  volume    = {24},
+  number    = {109},
+  pages     = {23-26},
+  doi       = {10.1090/s0025-5718-1970-0258249-6},
+  owner     = {Vincent},
+  timestamp = {2020.12.18},
+}
+
 @Book{Goldman1985,
   title     = {Acting and Action in Shakespearean Tragedy},
   publisher = {Princeton University Press},
@@ -12744,6 +12952,19 @@
   doi       = {10.1016/j.imavis.2009.08.002},
   owner     = {Vincent},
   timestamp = {2019.03.22},
+}
+
+@Article{Grossman2002,
+  author    = {Grossman, J.},
+  title     = {Patterns of collaboration in mathetmatical research},
+  journal   = {SIAM News},
+  year      = {2002},
+  volume    = {35},
+  number    = {9},
+  pages     = {1-3},
+  owner     = {Vincent},
+  timestamp = {2020.12.18},
+  url       = {https://archive.siam.org/pdf/news/485.pdf},
 }
 
 @Book{Grossman2012,
@@ -14247,6 +14468,26 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.01.03},
 }
 
+@Book{Hoffmeier1999,
+  title     = {Israel in Egypt: The Evidence for the Authenticity of the Exodus Tradition},
+  publisher = {Oxford University Press},
+  year      = {1999},
+  author    = {Hoffmeier, J. K.},
+  doi       = {10.1093/acprof:oso/9780195130881.001.0001},
+  owner     = {Vincent},
+  timestamp = {2020.12.18},
+}
+
+@Book{Hoffmeier2005,
+  title     = {Ancient Israel in Sinai: The Evidence for the Authenticity of the Wilderness Traditions},
+  publisher = {Oxford University Press},
+  year      = {2005},
+  author    = {Hoffmeier, J. K.},
+  doi       = {10.1093/acprof:oso/0195155467.001.000},
+  owner     = {Vincent},
+  timestamp = {2020.12.18},
+}
+
 @Article{Hofmann2001,
   author    = {Hofmann, T.},
   title     = {Unsupervised Learning by Probabilistic Latent Semantic Analysis},
@@ -14549,6 +14790,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1145/1014052.1014073},
   owner     = {Vincent},
   timestamp = {2019.04.11},
+}
+
+@Article{Hu2006,
+  author    = {Hu, Y.},
+  title     = {Efficient, high-quality force-directed graph drawing},
+  journal   = {Mathematica Journal},
+  year      = {2006},
+  volume    = {10},
+  pages     = {37-71},
+  owner     = {Vincent},
+  timestamp = {2020.12.18},
+  url       = {http://asus.myds.me:6543/paper/ktall/37%20-%201984%20-%20Efficient,%20High-Quality%20Force-Directed%20Graph%20Drawing.pdf},
 }
 
 @Article{Hu2013,
@@ -15602,6 +15855,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.09},
 }
 
+@Book{Johnson2002,
+  title     = {The purpose of the Biblical genealogies, with special reference to the setting of the genealogies of Jesus},
+  publisher = {Wipf and Stock},
+  year      = {2002},
+  author    = {Johnson, M. D.},
+  owner     = {Vincent},
+  timestamp = {2020.12.18},
+  url       = {https://wipfandstock.com/9781579102746/the-purpose-of-the-biblical-genealogies/},
+}
+
 @Article{Johnson2010,
   author    = {Johnson, S. and Torres, J. J. and Marro, J. and Miguel Muñoz, A.},
   title     = {Entropic Origin of Disassortativity in Complex Networks},
@@ -15609,6 +15872,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   year      = {2010},
   volume    = {104},
   number    = {10},
+  pages     = {108702},
   doi       = {10.1103/physrevlett.104.108702},
   owner     = {Vincent},
   timestamp = {2019.04.06},
@@ -16755,6 +17019,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.06},
   url       = {https://cora.ucc.ie/handle/10468/3009},
+}
+
+@Book{Kitchen2003,
+  title     = {On the reliability of the old testament},
+  publisher = {Wiliam B. Eerdmans Publishing},
+  year      = {2003},
+  author    = {Kitchen, K. A.},
+  owner     = {Vincent},
+  timestamp = {2020.12.18},
+  url       = {https://www.eerdmans.com/Products/0396/on-the-reliability-of-the-old-testament.aspx},
 }
 
 @Article{Kittler1998,
@@ -18161,6 +18435,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.10},
 }
 
+@Article{Lazer2009,
+  author    = {Lazer, D. and Pentland, A. and Adamic, L. and Aral, S. and Barabasi, A.-L. and Brewer, D. and Christakis, N. and Contractor, N. and Fowler, J. and Gutmann, M. and Jebara, T. and King, G. and Macy, M. and Roy, D. and Van Alstyne, M.},
+  title     = {Computational Social Science},
+  journal   = {Science},
+  year      = {2009},
+  volume    = {323},
+  number    = {5915},
+  pages     = {721-723},
+  doi       = {10.1126/science.1167742},
+  owner     = {Vincent},
+  timestamp = {2020.12.18},
+}
+
 @Article{Lazic2015,
   author    = {Lazic, N. and Subramanya, A. and Ringgaard, M. and Pereira, F.},
   title     = {Plato: A Selective Context Model for Entity Resolution},
@@ -18735,6 +19022,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1207/s15516709cog0504_1},
   owner     = {Vincent},
   timestamp = {2019.04.13},
+}
+
+@Book{Lemche2008,
+  title     = {The Old testament between theology and history},
+  publisher = {Westminster Johen Know Press},
+  year      = {2008},
+  author    = {Lemche, N. P.},
+  owner     = {Vincent},
+  timestamp = {2020.12.18},
+  url       = {https://www.wjkbooks.com/Products/0664232450/the-old-testament-between-theology-and-history.aspx},
 }
 
 @InProceedings{Leordeanu2005,
@@ -21222,6 +21519,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://arxiv.org/abs/1512.00728},
 }
 
+@Article{Massey2015a,
+  author    = {Massey, S.},
+  title     = {Genetic Code Evolution Reveals the Neutral Emergence of Mutational Robustness, and Information as an Evolutionary Constraint},
+  journal   = {Life},
+  year      = {2015},
+  volume    = {5},
+  number    = {2},
+  pages     = {1301-1332},
+  doi       = {10.3390/life5021301},
+  owner     = {Vincent},
+  timestamp = {2020.12.18},
+}
+
 @Article{Massey2016,
   author    = {Massey, S. E.},
   title     = {Social network analysis of the biblical Moses},
@@ -21292,6 +21602,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1038/srep00814},
   owner     = {Vincent},
   timestamp = {2019.04.03},
+}
+
+@Article{Matisziw2008,
+  author    = {Matisziw, T. C. and Murray, A. T. and Grubesic, T. H.},
+  title     = {Exploring the vulnerability of network infrastructure to disruption},
+  journal   = {Annals of Regional Science},
+  year      = {2008},
+  volume    = {43},
+  number    = {2},
+  pages     = {307-321},
+  doi       = {10.1007/s00168-008-0235-x},
+  owner     = {Vincent},
+  timestamp = {2020.12.18},
 }
 
 @InProceedings{Matsui2011,
@@ -22721,6 +23044,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.03.13},
 }
 
+@Article{Morone2015,
+  author    = {Morone, F. and Makse, H. A.},
+  title     = {Influence maximization in complex networks through optimal percolation},
+  journal   = {Nature},
+  year      = {2015},
+  volume    = {524},
+  number    = {7563},
+  pages     = {65-68},
+  doi       = {10.1038/nature14604},
+  owner     = {Vincent},
+  timestamp = {2020.12.18},
+}
+
 @Article{Morris1992,
   author    = {Morris, A. H. and Kasper, G. M. and Adams, D. A.},
   title     = {The Effects and Limitations of Automated Text Condensing on Reading Comprehension Performance},
@@ -22799,6 +23135,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1162/coli.2008.34.2.193},
   owner     = {Vincent},
   timestamp = {2020.01.05},
+}
+
+@Article{Mossa2002,
+  author    = {Mossa, S. and Barthélemy, M. and Stanley, H. E. and Amaral, L. A. N.},
+  title     = {Truncation of power law behavior in "scale-free" network models due to information filtering},
+  journal   = {Physical Review Letters},
+  year      = {2002},
+  volume    = {88},
+  pages     = {138701},
+  doi       = {10.1103/PhysRevLett.88.138701},
+  owner     = {Vincent},
+  timestamp = {2010.12.06},
 }
 
 @Book{Mostellar1984,
@@ -24214,6 +24562,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.02},
 }
 
+@Book{Noth1981,
+  title     = {A history of Pentateuchal traditions},
+  publisher = {Scholars Press},
+  year      = {1981},
+  author    = {Noth, M.},
+  owner     = {Vincent},
+  timestamp = {2020.12.18},
+  url       = {https://www.dukeupress.edu/a-history-of-pentateuchal-traditions},
+}
+
 @Article{Nothelfer2009,
   author    = {Nothelfer, C. E. and DeLong, J. E. and Cutting, J. E.},
   title     = {Shot Structure in Hollywood Film},
@@ -24283,6 +24641,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.02},
   url       = {http://ufdcimages.uflib.ufl.edu/UF/00/09/85/46/00001/cuchulainnirisha00nutt.pdf},
+}
+
+@Book{Oblath2004,
+  title     = {The Exodus itinerary sites, Their locations from the perspective of biblical sources},
+  publisher = {Peter Lang Publishing},
+  year      = {2004},
+  author    = {Oblath, M. D.},
+  owner     = {Vincent},
+  timestamp = {2020.12.18},
+  url       = {https://www.peterlang.com/view/title/58072},
 }
 
 @Article{OConnell1990,
@@ -26808,6 +27176,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.84.7524&rep=rep1&type=pdf#page=141},
 }
 
+@Article{Redies2008,
+  author    = {Redies, C. and Hasenstein, J. and Denzler, J.},
+  title     = {Fractal-like image statistics in visual art: similarity to natural scenes},
+  journal   = {Spatial Vision},
+  year      = {2008},
+  volume    = {21},
+  number    = {1-2},
+  pages     = {137-148},
+  doi       = {10.1163/156856807782753921},
+  owner     = {Vincent},
+  timestamp = {2020.12.18},
+}
+
 @Book{Reed2004,
   title     = {Digital Image Sequence Processing},
   publisher = {Taylor \& Francis},
@@ -28770,6 +29151,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.11},
 }
 
+@InCollection{Schmid2006,
+  author    = {Schmid, K.},
+  title     = {The So-Called Yahwist and the Literary Gap between Genesis and Exodus},
+  booktitle = {A Farewell to the Yahwist? The Composition of the Pentateuch in Recent European Interpretation},
+  publisher = {Society of Biblical Literature},
+  year      = {2006},
+  pages     = {29-50},
+  owner     = {Vincent},
+  timestamp = {2020.12.18},
+  url       = {https://www.zora.uzh.ch/id/eprint/19909/},
+}
+
 @InProceedings{Schmid2008,
   author    = {Schmid, H. and Laws, F.},
   title     = {Estimation of Conditional Probabilities with Decision Trees and an Application to Finegrained POS Tagging},
@@ -29068,6 +29461,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2018.06.12},
 }
 
+@Article{SendiaNadal2016,
+  author    = {Sendiña-Nadal, I. and Danziger, M. M. and Wang, Z. and Havlin, S. and Boccaletti, S.},
+  title     = {Assortativity and leadership emerge from anti-preferential attachment in heterogeneous networks},
+  journal   = {Scientific Reports},
+  year      = {2016},
+  volume    = {6},
+  number    = {1},
+  pages     = {21297},
+  doi       = {10.1038/srep21297},
+  owner     = {Vincent},
+  timestamp = {2020.12.18},
+}
+
 @InProceedings{Sener2015,
   author    = {Sener, O. and Zamir, A. R. and Savarese, S. and Saxena, A.},
   title     = {Unsupervised Semantic Parsing of Video Collections},
@@ -29213,6 +29619,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.11},
   url       = {https://www.cambridge.org/core/books/understanding-machine-learning/3059695661405D25673058E43C8BE2A6},
+}
+
+@Article{Shanno1970,
+  author    = {Shanno, D. F.},
+  title     = {Conditioning of quasi-Newton methods for function minimization},
+  journal   = {Mathematics of Computation},
+  year      = {1970},
+  volume    = {24},
+  number    = {111},
+  pages     = {647-647},
+  doi       = {10.1090/s0025-5718-1970-0274029-x},
+  owner     = {Vincent},
+  timestamp = {2020.12.18},
 }
 
 @Article{Shannon1948,
@@ -30166,6 +30585,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1016/0378-8733(91)90008-h},
   owner     = {Vincent},
   timestamp = {2019.04.09},
+}
+
+@Article{Spehar2003,
+  author    = {Spehar, B. and Clifford, C. W. G. and Newell, B. R. and Taylor, R. P.},
+  title     = {Universal aesthetic of fractals},
+  journal   = {Computers \& Graphics},
+  year      = {2003},
+  volume    = {27},
+  number    = {5},
+  pages     = {813-820},
+  doi       = {10.1016/s0097-8493(03)00154-7},
+  owner     = {Vincent},
+  timestamp = {2020.12.18},
 }
 
 @InProceedings{Speriosu2010,
@@ -31570,6 +32002,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.12.01},
 }
 
+@Book{Thompson1987,
+  title     = {The origin tradition of ancient Israel, I. the literary formation of Genesis and Exodus},
+  publisher = {JSOT press},
+  year      = {1987},
+  author    = {Thompson, T. L.},
+  owner     = {Vincent},
+  timestamp = {2020.12.18},
+  url       = {https://www.bloomsbury.com/us/the-origin-tradition-of-ancient-israel-9780567333032/},
+}
+
 @Book{Thompson1999,
   title     = {Storytelling in the New Hollywood: Understanding Classical Narrative Technique},
   publisher = {Harvard University Press},
@@ -31790,7 +32232,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 
 @Book{Tolmie2013,
   title     = {Character Studies in the Fourth Gospel, Narrative Approaches to Seventy Figures in John},
-  publisher = {Eerdmans Publishing},
+  publisher = {Wiliam B. Eerdmans Publishing},
   year      = {2013},
   author    = {Tolmie, D. F. and Zimmermann, R. and Hunt, S.},
   owner     = {Vincent},
@@ -32590,6 +33032,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.13},
   url       = {https://www.press.uchicago.edu/ucp/books/book/chicago/T/bo11574153.html},
+}
+
+@Book{VanSeters1975,
+  title     = {Abraham in history and tradition},
+  publisher = {Yale University Press},
+  year      = {1975},
+  author    = {Van Seters, J.},
+  owner     = {Vincent},
+  timestamp = {2020.12.18},
+  url       = {https://books.google.fr/books/about/Abraham_in_History_and_Tradition.html?id=F3fboAEACAAJ},
 }
 
 @InProceedings{vanWillegen2009,
@@ -33581,6 +34033,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.03.23},
 }
 
+@Book{Wellhausen1883,
+  title     = {Prolegomena to the history of Israel},
+  publisher = {Reimer},
+  year      = {1883},
+  author    = {Wellhausen, J.},
+  doi       = {10.1017/CBO9781139383363},
+  owner     = {Vincent},
+  timestamp = {2020.12.18},
+}
+
 @Article{Wellman1983,
   author    = {Wellman, B.},
   title     = {Network Analysis: Some Basic Principles},
@@ -33779,6 +34241,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://press.princeton.edu/titles/8672.html},
 }
 
+@Article{White2008a,
+  author    = {White, E. P. and Enquist, B. J. and Green, J. L.},
+  title     = {On estimating the exponent of power-law frequency distributions},
+  journal   = {Ecology},
+  year      = {2008},
+  volume    = {89},
+  number    = {4},
+  pages     = {905-912},
+  doi       = {10.1890/07-1288.1},
+  owner     = {Vincent},
+  timestamp = {2020.12.18},
+}
+
 @InProceedings{White2011,
   author    = {White, D. M.},
   title     = {Bridging Theatre and Mathematics: A Playwright's View},
@@ -33788,6 +34263,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.08.18},
   url       = {https://archive.bridgesmathart.org/2011/bridges2011-577.pdf},
+}
+
+@Book{Whybray1987,
+  title     = {The making of the Pentateuch},
+  publisher = {Sheffield Academic Press},
+  year      = {1987},
+  author    = {Whybray, R. N.},
+  owner     = {Vincent},
+  timestamp = {2020.12.18},
+  url       = {https://www.bloomsbury.com/us/the-making-of-the-pentateuch-9781850750635/},
 }
 
 @InProceedings{Wiebe1990,
@@ -35780,6 +36265,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1007/978-3-030-05710-7_22},
   owner     = {Vincent},
   timestamp = {2020.12.15},
+}
+
+@Book{Zipf1936,
+  title     = {The psycho-biology of language},
+  publisher = {George Routledge and Sons},
+  year      = {1936},
+  author    = {Zipf, G. K.},
+  owner     = {Vincent},
+  timestamp = {2020.12.18},
+  url       = {https://mitpress.mit.edu/books/psycho-biology-language},
 }
 
 @Book{Zipf1949,
