--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -3811,6 +3811,17 @@
   timestamp = {2019.04.10},
 }
 
+@InProceedings{Bontcheva2014,
+  author    = {Bontcheva, K. and Roberts, I. and Derczynski, L. and Rout, D.},
+  title     = {The GATE Crowdsourcing Plugin: Crowdsourcing Annotated Corpora Made Easy},
+  booktitle = {14th Conference of the European Chapter of the Association for Computational Linguistics},
+  year      = {2014},
+  pages     = {97-100},
+  doi       = {10.3115/v1/e14-2025},
+  owner     = {Vincent},
+  timestamp = {2020.12.19},
+}
+
 @InProceedings{Bordes2013,
   author    = {Bordes, A. and Usunier, N. and Garcia-Duran, A. and Weston, J. and Yakhnenko, O.},
   title     = {Translating embeddings for modeling multi-relational data},
@@ -11870,6 +11881,17 @@
   timestamp = {2019.07.14},
 }
 
+@Article{Ghannay2016,
+  author    = {Ghannay, S. and Favre, B. and Estève, Y. and Camelin, N.},
+  title     = {Word embedding evaluation and combination},
+  journal   = {10th International Conference on Language Resources and Evaluation},
+  year      = {2016},
+  pages     = {300-305},
+  owner     = {Vincent},
+  timestamp = {2020.12.19},
+  url       = {https://www.aclweb.org/anthology/L16-1046/},
+}
+
 @InProceedings{Ghannay2018,
   author    = {Ghannay, S. and Caubriere, A. and Estève, Y. and Camelin, N. and Simonnet, E. and Laurent, A. and Morin, E.},
   title     = {End-To-End Named Entity And Semantic Concept Extraction From Speech},
@@ -19229,6 +19251,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.01.02},
 }
 
+@InProceedings{Levy2014,
+  author    = {Levy, O. and Goldberg, Y.},
+  title     = {Dependency-Based Word Embeddings},
+  booktitle = {52nd Annual Meeting of the Association for Computational Linguistics},
+  year      = {2014},
+  pages     = {302-308},
+  doi       = {10.3115/v1/p14-2050},
+  owner     = {Vincent},
+  timestamp = {2020.12.19},
+}
+
 @Article{Levy2015,
   author    = {Levy, O. and Goldberg, Y. and Dagan, I.},
   title     = {Improving Distributional Similarity with Lessons Learned from Word Embeddings},
@@ -23078,6 +23111,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2020.01.04},
   url       = {https://www.sup.org/books/title/?id=2935},
+}
+
+@InProceedings{Mortensen2013,
+  author    = {Mortensen, J. and Musen, M. A. and Noy, N. F.},
+  title     = {Crowdsourcing the verification of relationships in biomedical ontologies},
+  booktitle = {AMIA Annual Symposium},
+  year      = {2013},
+  pages     = {1020-1029},
+  owner     = {Vincent},
+  timestamp = {2020.12.19},
+  url       = {https://europepmc.org/article/pmc/3900126},
 }
 
 @InProceedings{Morzy2016,
@@ -27199,6 +27243,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.crcpress.com/Digital-Image-Sequence-Processing-Compression-and-Analysis/Reed/p/book/9780849315268},
 }
 
+@InProceedings{Rehurek2010,
+  author    = {Rehurek, R. and Sojka, P.},
+  title     = {Software Framework for Topic Modelling with Large Corpora},
+  booktitle = {LREC Workshop on New Challenges for NLP Frameworks},
+  year      = {2010},
+  pages     = {45-50},
+  owner     = {Vincent},
+  timestamp = {2020.12.19},
+  url       = {http://is.muni.cz/publication/884893/en},
+}
+
 @InProceedings{Reimers2019,
   author    = {Reimers, N. and Gurevych, I.},
   title     = {Sentence-BERT: Sentence Embeddings using Siamese BERT-Networks},
@@ -28007,6 +28062,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2017.12.05},
 }
 
+@InProceedings{Rodin2016,
+  author    = {Rodin, I. and Chernyak, E. and Dubov, M. and Mirkin, B.},
+  title     = {Visualization of Dynamic Reference Graphs},
+  booktitle = {Workshop on Graph-based Methods for Natural Language Processing},
+  year      = {2016},
+  pages     = {34-38},
+  doi       = {10.18653/v1/w16-1406},
+  owner     = {Vincent},
+  timestamp = {2020.12.19},
+}
+
 @Book{Rogers1981,
   title     = {Communication Networks: Toward a New Paradigm for Research},
   publisher = {Free Press},
@@ -28617,6 +28683,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1007/BF02289527},
   owner     = {Vincent},
   timestamp = {2017.10.26},
+}
+
+@InProceedings{Sabou2012,
+  author    = {Sabou, M. and Bontcheva, K. and Scharl, A.},
+  title     = {Crowdsourcing research opportunities},
+  booktitle = {12th International Conference on Knowledge Management and Knowledge Technologies},
+  year      = {2012},
+  pages     = {17},
+  doi       = {10.1145/2362456.2362479},
+  owner     = {Vincent},
+  timestamp = {2020.12.19},
 }
 
 @Article{Sacha2014,
@@ -34594,6 +34671,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2020.12.15},
   url       = {https://www.aclweb.org/anthology/W16-4004/},
+}
+
+@Article{WohlgenanntSabouHanika2016,
+  author    = {Wohlgenannt, G. and Sabou, M. and Hanika, F.},
+  title     = {Crowd-based ontology engineering with the uComp Protégé plugin},
+  journal   = {Semantic Web},
+  year      = {2016},
+  volume    = {7},
+  number    = {4},
+  pages     = {379–398},
+  doi       = {10.3233/SW-150181},
+  owner     = {Vincent},
+  timestamp = {2020.12.19},
 }
 
 @InCollection{Wojnarowski2016,
