--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -1825,6 +1825,31 @@
   url       = {https://www.peterlang.com/view/title/15356},
 }
 
+@Article{Bagrow2008a,
+  author    = {Bagrow, J. P. and Bollt, E. M. and Skufca, J. D. and ben-Avraham, D.},
+  title     = {Portraits of complex networks},
+  journal   = {Europhysics Letters},
+  year      = {2008},
+  volume    = {81},
+  number    = {6},
+  pages     = {68004},
+  doi       = {10.1209/0295-5075/81/68004},
+  owner     = {Vincent},
+  timestamp = {2021.01.21},
+}
+
+@Article{Bagrow2018,
+  author    = {Bagrow, J. P. and Bollt, E. M.},
+  title     = {An information-theoretic, all-scales approach to comparing networks},
+  journal   = {Applied Network Science},
+  year      = {2019},
+  volume    = {4},
+  pages     = {45},
+  doi       = {10.1007/s41109-019-0156-x},
+  owner     = {Vincent},
+  timestamp = {2018.04.17},
+}
+
 @Article{Baiesi2004,
   author    = {Baiesi, M. and Paczuski, M.},
   title     = {Scale-free networks of earthquakes and aftershocks},
@@ -11455,6 +11480,30 @@
   timestamp = {2019.04.07},
 }
 
+@Electronic{Gaerber2021,
+  author       = {Gärber, D.},
+  month        = {01},
+  year         = {2021},
+  title        = {{Simpsons} Interaction Graph -- Who Talks to Whom?},
+  howpublished = {\url{https://www.danielgaerber.at/visuals/Simpsons Interaction Graph/}},
+  organization = {Data Visualizations},
+  url          = {https://www.danielgaerber.at/visuals/Simpsons Interaction Graph/},
+  owner        = {Vincent},
+  timestamp    = {2021.01.17},
+}
+
+@Electronic{Gaerber2021a,
+  author       = {Gärber, D.},
+  month        = {01},
+  year         = {2021},
+  title        = {{South Park} Interaction Graph -- Who Talks to Whom?},
+  howpublished = {\url{https://www.danielgaerber.at/visuals/South Park Interaction Graph/}},
+  organization = {Data Visualizations},
+  url          = {https://www.danielgaerber.at/visuals/South Park Interaction Graph/},
+  owner        = {Vincent},
+  timestamp    = {2021.01.17},
+}
+
 @Article{Gaikar2015,
   author    = {Gaikar, D. D. and Marakarkandy, B. and Dasgupta, C.},
   title     = {Using Twitter data to predict the performance of Bollywood movies},
@@ -18125,6 +18174,20 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://dl.acm.org/citation.cfm?id=655813},
 }
 
+@InProceedings{Lafhel2020,
+  author    = {Lafhel, M. and Cherifi, H. and Renoust, B. and El Hassouni, M. and Mourchid, Y.},
+  title     = {Movie Script Similarity Using Multilayer Network Portrait Divergence},
+  booktitle = {International Conference on Complex Networks and Their Applications},
+  year      = {2020},
+  volume    = {943},
+  series    = {Studies in Computational Intelligence},
+  pages     = {284-295},
+  publisher = {Springer},
+  doi       = {10.1007/978-3-030-65347-7_24},
+  owner     = {Vincent},
+  timestamp = {2020.12.24},
+}
+
 @InCollection{Laguna2013,
   author    = {Laguna, M. and Martí, R.},
   title     = {Heuristics},
@@ -18962,6 +19025,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.24963/ijcai.2020/709},
   owner     = {Vincent},
   timestamp = {2020.07.10},
+}
+
+@Article{Lee2020d,
+  author    = {Lee, O-J. and Hong, H. and You, E.-S. and Kim, J.-T.},
+  title     = {Discovering Social Desires and Conflicts from Subculture Narrative Multimedia},
+  journal   = {Sustainability},
+  year      = {2020},
+  volume    = {12},
+  number    = {24},
+  pages     = {10241},
+  doi       = {10.3390/su122410241},
+  owner     = {Vincent},
+  timestamp = {2021.01.05},
 }
 
 @InProceedings{Lee2020f,
@@ -26287,6 +26363,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   groups    = {Visualisation},
   owner     = {Vincent},
   timestamp = {2019.06.24},
+}
+
+@Article{Pojoga2020,
+  author    = {Pojoga, V. and Neagu, L.-M. and Dascalu, M.},
+  title     = {The Character Network in Liviu Rebreanu's Ion: A Quantitative Analysis of Dialogue},
+  journal   = {Metacritic Journal for Comparative Studies and Theory},
+  year      = {2020:},
+  volume    = {6},
+  number    = {2},
+  pages     = {23-47},
+  doi       = {10.24193/mjcst.2020.10.02},
+  owner     = {Vincent},
+  timestamp = {2020.12.24},
 }
 
 @InProceedings{Pons2005,
